apply plugin: 'com.android.application'
apply plugin: 'org.greenrobot.greendao'
android {
    compileSdkVersion 27
    buildToolsVersion "27.0.0"
    defaultConfig {
        applicationId "com.wuyou.merchant"
        minSdkVersion 17
        targetSdkVersion 22
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
    sourceSets {
        main {
            jniLibs.srcDirs = ['libs']
        }
    }
}
greendao {
    schemaVersion 7
    targetGenDir 'src/main/java'
}

allprojects {
    repositories {
        maven { url "https://jitpack.io" }
        google()
    }
}
ext {
    supportLibVersion = '27.0.2'
}

dependencies {
    compile fileTree(include: ['*.jar'], dir: 'libs')
    testCompile 'junit:junit:4.12'
    compile 'com.github.ngreedy:tribe_lib:2.9.4'
    compile 'com.jakewharton:butterknife:8.8.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
    compile 'com.android.support:design:27.0.2'
    compile 'com.squareup.okhttp3:okhttp:3.8.0'
    compile 'com.yinglan.alphatabs:library:1.0.8'
    implementation 'com.github.bumptech.glide:glide:4.5.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
    compile 'com.android.support:support-v4:27.0.2'
    compile 'com.youth.banner:banner:1.4.9'
    compile 'org.greenrobot:greendao:3.2.2'
    compile "com.android.support:cardview-v7:$supportLibVersion"
    implementation project(':IMKit')
    implementation('com.zhihu.android:matisse:0.5.0-alpha4') {
        exclude group: 'com.android.support'
    }//知乎图片选择器
    implementation('com.squareup.picasso:picasso:2.5.2') {
        exclude group: 'com.android.support'
    }
    compile('cn.qqtheme.framework:WheelPicker:1.5.5') {
        exclude group: 'com.android.support'
    }
}
